Fixed visibility-bug while logged out. Improved usability of the menu.

--- a/WebContent/css/page.css
+++ b/WebContent/css/page.css
@@ -51,3 +51,20 @@
 	float: right;
 	margin-top: -30px;
 }
+
+.verticalMenu ul
+{
+    list-style-type: none;
+}
+
+/* TODO: padding wordt recursief toegevoegd, mag niet! */
+.verticalMenu li
+{
+    padding: 5px;
+}
+
+.verticalMenu .dropdown
+{
+	float: right;
+	display: inline;
+}
